# seqhax

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
scripts/: falen  pecheck-wrapper.py
src/: CMakeLists.txt  fastq-add-prefix.c  fastq-check.c  fastq-remove-prefix.c  fastq_add_id_barcode.c  fastq_add_prefix.c  fastq_check.c  fastq_remove_prefix.c  ilfastq-len-filter.c  ilfastq_len_filter.c  infinite-fastq.c  kmseq.hh  ksw.c  libseqhax.hh  qes_seq.c  seq-qual-splice.py  seqhax-main.c  seqhax-main.cc  seqhax.c  seqhax.h  trimadap.c
src/ext/libqes/: CMakeLists.txt  README.md
src/htshax/: htshax_bcfhist.cc  main.cc
src/lib/: kmseq.hh  kseq.h
src/lib/libqes/: CMakeLists.txt
src/lib/libqes/src/: qes_file.c
src/lib/pcg-c/: pcg_variants.h
src/libqes/: qes_config.h  qes_file.c  qes_log.h  qes_seq.c  qes_seq.h  qes_seqfile.c  qes_str.c  qes_str.h  qes_util.h
src/libs/: seqhax.c  seqhax.h
src/progs/: anon.c  cat.cc  clihist.cc  convert.c  filter.c  pairs.c  pecheck.cc  preapp.c  progs.h  randfq.c  randseq.c  rebarcode.cc  seq.c  stats.c  stats.cc  trunc.c
src/seqhax/: seqhax-main.cc
src/seqhax/progs/: anon.c  filter.c  grepbed.cc  pairs.c  pecheck.cc  rebarcode.cc
src/tests/: fastream.py  fqstream.py
tests/: test.sh  test_pairs.py
tests/data/: broken-paired_il.fq  paired_il.fq  paired_r1.fq  paired_r2.fq
tests/pecheck/: il.fq  r1.fq  r2.fq  test.sh
